--- a/PA5_JJG.ipynb
+++ b/PA5_JJG.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "id": "2eae282a",
    "metadata": {},
    "outputs": [
@@ -33,6 +33,8 @@
       "uno\n",
       "Give an english word one-twenty for a Spanish translation (Enter 0 to stop): two\n",
       "dos\n",
+      "Give an english word one-twenty for a Spanish translation (Enter 0 to stop): three\n",
+      "tres\n",
       "Give an english word one-twenty for a Spanish translation (Enter 0 to stop): 0\n"
      ]
     }
@@ -62,11 +64,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "660c9fc7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The coolest day was on September  22\n",
+      "The second hottest day was on September  14\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{1: 15.222222222222221,\n",
+       " 2: 14.111111111111114,\n",
+       " 3: 14.666666666666664,\n",
+       " 4: 14.666666666666664,\n",
+       " 5: 13.555555555555557,\n",
+       " 6: 16.333333333333336,\n",
+       " 7: 15.777777777777779,\n",
+       " 8: 15.222222222222221,\n",
+       " 9: 13.0,\n",
+       " 10: 13.555555555555557,\n",
+       " 11: 14.666666666666664,\n",
+       " 12: 16.333333333333336,\n",
+       " 13: 17.444444444444443,\n",
+       " 14: 18.0,\n",
+       " 15: 14.666666666666664,\n",
+       " 16: 15.222222222222221,\n",
+       " 17: 17.444444444444443,\n",
+       " 18: 17.444444444444443,\n",
+       " 19: 15.777777777777779,\n",
+       " 20: 11.333333333333336,\n",
+       " 21: 11.333333333333336,\n",
+       " 22: 6.888888888888886,\n",
+       " 23: 7.444444444444443,\n",
+       " 24: 9.666666666666664,\n",
+       " 25: 10.777777777777779,\n",
+       " 26: 10.777777777777779,\n",
+       " 27: 15.222222222222221,\n",
+       " 28: 16.333333333333336,\n",
+       " 29: 18.555555555555557,\n",
+       " 30: 15.777777777777779}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SepTemp={1:85,2:83,3:84,4:84,5:82,6:87,7:86,8:85,9:81,10:82,11:84,12:87,13:89,\n",
+    "        14:90,15:84,16:85,17:89,18:89,19:86,20:78,21:78,22:70,23:71,24:75,25:77,\n",
+    "         26:77,27:85,28:87,29:91,30:86}\n",
+    "x=list(SepTemp.values())\n",
+    "y=list(SepTemp.keys())\n",
+    "import numpy as np\n",
+    "feh=np.array(x)\n",
+    "cel=(5*feh/9-32)\n",
+    "SepTemp=dict(zip(y,cel))\n",
+    "\n",
+    "coolest=min(SepTemp.values())\n",
+    "for key in SepTemp:\n",
+    "    if SepTemp[key]==coolest:\n",
+    "        print(\"The coolest day was on September \", key)\n",
+    "max2= (list(sorted(SepTemp.values()))[-2])\n",
+    "for key in SepTemp:\n",
+    "    if SepTemp[key]==max2:\n",
+    "        print(\"The second hottest day was on September \", key)\n",
+    "SepTemp"
+   ]
   },
   {
    "cell_type": "markdown",
